src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Individual_FirstName__c</fullName>
        <description>Created as part of the HAS Form Implementation. This is being used to store the FirstName of an Individual Nominator. It will be updated to be the same as the first name of the related contact record representing the Nominator.</description>
        <label>Forename</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_LastName__c</fullName>
        <description>Created as part of the HAS Form Implementation. This is being used to store the LastName of an Individual Nominator. It will be updated to be the same as the last name of the related contact record representing the Nominator.</description>
        <label>Surname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Salutation__c</fullName>
        <description>Created as part of the HAS Form Implementation. This is being used to store the Salutation of an Individual Nominator. It will be updated to be the same as the first name of the related contact record representing the Nominator.</description>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>